--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
     <script defer src="script.js"></script>
     <script defer src="type.js"></script>
     <script defer src="chart.js"></script>
+    <script defer src="map.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
     <title>Document</title>
 </head>
 
@@ -21,6 +28,8 @@
         the latitude of the ISS is: <span id="lat"></span> <br>
         the longitude of the ISS is: <span id="lon"></span>
     </p>
+
+    <div id="issMap"></div>
     <div id="info"></div>
     <div id="movies"></div>
     <div id="means"></div>
