update link target for ISS API in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Where Is The ISS?</h1>
 
     <p class="text">
-        This site shows the real-time location of the International Space Station (ISS) as it orbits Earth. The coordinates are updated live using data from the <a href="https://wheretheiss.at/">Where the ISS at API</a>, and the map displays its current position. Explore the map, track its movement, and see where in the world the ISS is right now!
+        This site shows the real-time location of the International Space Station (ISS) as it orbits Earth. The coordinates are updated live using data from the <a href="https://wheretheiss.at/" target="_parent">Where the ISS at API</a>, and the map displays its current position. Explore the map, track its movement, and see where in the world the ISS is right now!
 
     </p>
     <p>
